--- a/templates/Expert.html
+++ b/templates/Expert.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
-    <link rel="icon" href={%static "images/favicon.ico"%} type="image/x-icon">
+    <!-- <link rel="icon" href={%static "images/favicon.ico"%} type="image/x-icon"> -->
     <!-- Stylesheets-->
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:100,300,300i,400,700,900">
     <link rel="stylesheet" href={%static "css/bootstrap.css"%}>
@@ -17,7 +17,7 @@
     <div style="background: #212121; padding: 10px 0; box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3); clear: both; text-align:center; position: relative; z-index:1;"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src={%static "images/ie8-panel/warning_bar_0000_us.jpg"%} border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
     <script src={%static "js/html5shiv.min.js"%}></script>
     <![endif]-->
-	<script src="https://apps.bdimg.com/libs/jquery/3.6.0/jquery.min.js"></script>
+	<script src={%static 'js/jquery-3.6.0.min.js'%}></script>
 	<script>
 	<!-- 接单用 -->
 function loadXMLDoc3(obj_id)
